unpackaged/main/default/objects/Web_Metric__c/Web_Metric__c.object-meta.xml
<CustomObject>
    <label>Web Metric</label>
    <nameField>
        <displayFormat>WB-{000000}</displayFormat>
        <label>Web Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>