unpackaged/main/default/objects/Web_Metric__c/fields/Concurrent_Listing__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Listing__c</fullName>
    <label>Concurrent Listing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>