unpackaged/main/default/objects/Web_Metric__c/fields/Concurrent_Listing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Listing_Balance__c</fullName>
    <label>Concurrent Listing Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>