unpackaged/main/default/objects/Web_Metric__c/fields/Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ext Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>