unpackaged/main/default/objects/Web_Metric__c/fields/Total_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Balance__c</fullName>
    <description>Field to store Total Credit Balance value.</description>
    <label>Total Credit Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>