unpackaged/main/default/objects/Web_Metric__c/fields/Total_Credit_Purchased_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Purchased_1_Year__c</fullName>
    <description>Field to store Total Credit Purchased(1 Year) value.</description>
    <label>Total Credit Purchased(1 Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>