unpackaged/main/default/objects/Web_Metric__c/fields/Total_Listing_Posted_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Listing_Posted_30_Days__c</fullName>
    <description>Field to store Total Listing Posted(30 Days)</description>
    <label>Total Listing Posted(30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>