unpackaged/main/default/objects/Web_Metric__c/fields/Total_Listing_Turbo_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Listing_Turbo_30_Days__c</fullName>
    <description>Field to store Total Listing Turbo(30 Days) value.</description>
    <label>Total Listing Turbo(30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>