unpackaged/main/default/objects/Web_Metric__c/fields/Total_Prime_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Prime_Credit_Balance__c</fullName>
    <label>Total Prime Credit Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>